<resources>
    <string name="app_name">Nautischool</string>
    <string name="stringPTT">PTT</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="logo">Logo</string>
    <string name="abc">ABC</string>
    <string name="def">DEF</string>
    <string name="_4">4</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="ghi">GHI</string>
    <string name="jkl">JKL</string>
    <string name="mno">MNO</string>
    <string name="pqrs">PQRS</string>
    <string name="tuv">TUV</string>
    <string name="wxyz">WXYZ</string>
    <string name="c">C</string>
    <string name="_0">0</string>
    <string name="e">E</string>

    <string name="_1_25">1/25</string>
    <string name="d_w">D/W</string>

    <string name="vol">Vol</string>
    <string name="sq">SQ</string>
    <string name="dist">DIST</string>
    <string name="www_nautischool">www.nautischool.ch</string>
    <string name="vhf_dsc_school">VHF-DSC-School</string>
    <string name="hi">Hi</string>
    <string name="user">User</string>
    <string name="_16">16</string>
    <string name="rx">Rx</string>
    <string name="dsc">DSC</string>
    <string name="t_w">T/W</string>
    <string name="m_s">M/S</string>
    <string name="scan">Scan</string>
    <string name="intWord">INT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="please_contact">To sign up and get your login, please contact</string>
    <string name="info_nautischool_ch">info@nautischool.ch</string>
    <string name="todo">Logo</string>

    <!-- For login-->
    <string name="user1_login">user1</string>
    <string name="user1_password">1234</string>
    <string name="server">85.1.228.64</string>
    <string name="server_host">nautischool</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="back">Back</string>
    <string name="modes">MODES</string>
    <string name="settings">Settings</string>
    <string name="ship_station">Ship Station</string>
    <string name="various_settings">VARIOUS SETTINGS</string>
    <string name="simulate_receving_messages">Simulate receving messages</string>
    <string name="receive_dsc_message">RECEIVE DSC MESSAGE</string>
    <string name="receive_vocal_message">RECEIVE VOCAL MESSAGE</string>
    <string name="lbl_vessel_name">Vessel name: </string>
    <string name="lbl_call_sign">Call sign: </string>
    <string name="lbl_mmsi">MMSI: </string>
    <string name="lbl_mmsi_grp">Group MMSI: </string>
    <string name="lbl_gps">GPS:</string>
    <string name="rad">Rad</string>
    <string name="Position">No Position</string>
    <string name="available">Available</string>
    <string name="call">Call</string>
    <string name="log">Log</string>
    <string name="menu">Menu</string>
    <string name="volume">Volume</string>
    <string name="squelch">Squelch</string>
    <string name="account">Account</string>
    <string name="connection">Connection</string>
    <string name="exams">Exams</string>
    <string name="tuto">Tuto</string>
    <string name="expert_mrcc">Expert MRCC</string>
    <string name="credit">Credit</string>
    <string name="help">Help</string>
    <string name="educational_links">Educational Links</string>

</resources>