<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.arjun.vhf_school.LoginActivity">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="336dp"
        android:background="@color/colorWhite"
        android:columnCount="3"
        android:rowCount="4"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <ImageButton
            android:id="@+id/buttonSound"
            android:layout_width="200dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:layout_rowSpan="3"

            android:adjustViewBounds="true"
            android:background="@color/colorWhite"
            android:scaleType="fitCenter"
            android:src="@drawable/logo_login" android:contentDescription="@string/todo" />


        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="50dp"
            android:layout_row="0"
            android:background="@drawable/edit_text"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/username"
            android:inputType="textCapWords|textPersonName"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />


        <EditText
            android:id="@+id/edit_text_password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_columnSpan="2"
            android:layout_marginEnd="60dp"
            android:layout_marginRight="60dp"
            android:layout_marginTop="15dp"
            android:layout_row="1"
            android:background="@drawable/edit_text"
            android:ellipsize="start"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />


        <Button
            android:id="@+id/push_buttonLogin"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_row="2"
            android:background="@color/colorLogin"
            android:text="@string/login"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:onClick="login"/>

        <Button
            android:id="@+id/push_buttonCancel"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_marginEnd="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="50dp"
            android:layout_row="2"
            android:background="@color/colorLogin"
            android:text="@string/cancel"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:onClick="cancel"/>


        <TextView
            android:id="@+id/text_view_emailUs"
            android:layout_columnSpan="2"
            android:layout_gravity="end"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="25dp"
            android:layout_row="2"
            android:text="@string/please_contact"
            android:textColor="@color/colorBlack"
            android:textSize="17sp" />

        <!--info@nautischool.ch-->

        <TextView
            android:id="@+id/text_view_emailInfo"
            android:layout_column="2"
            android:layout_gravity="start"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="25dp"
            android:layout_row="3"
            android:text="@string/info_nautischool_ch"
            android:textColor="@color/colorLogin"
            android:textSize="17sp" />

    </GridLayout>


</RelativeLayout>
